# kzkitty

./: Dockerfile  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
kzkitty/: __main__.py  api.py  bot.py  components.py  gateway.py  models.py
kzkitty/api/: http.py  kz.py  steam.py
kzkitty/api/kz/: __init__.py  base.py  cs2.py  csgo.py
