[project]
name = "kzkitty"
version = "0.1.0"
description = "Discord bot for the CS:GO and CS2 KZ global APIs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hikari-arc[rest]>=2.3.0",
    "hikari[server,speedups]>=2.5.0",
    "pydantic>=2.13.4",
    "tortoise-orm>=1.1.7",
    "urllib3-future[brotli,zstd]>=2.20.907",
    "uvloop>=0.22.1",
]

[tool.basedpyright]
typeCheckingMode = "standard"
reportImplicitStringConcatenation = false
reportUnusedCallResult = false

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["A", "ANN", "ARG", "BLE", "C4", "DTZ", "E", "ERA", "F", "FIX",
          "FURB", "ISC", "INP", "G", "PERF", "PIE", "RSE", "RUF", "S", "SIM",
          "SLF", "T20", "TC", "TID", "UP", "W"]
ignore = ["S314"]

[tool.uv.sources.hikari]
git = "https://github.com/hikari-py/hikari.git"
rev = "222aab1bcd54bba9292d0087271a289a0742a56b"
