[project]
name = "kzkitty"
version = "0.1.0"
description = "Discord bot for the CS:GO and CS2 KZ global APIs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hikari-arc[rest]>=2.3.0",
    "hikari[server,speedups]>=2.5.0",
    "pydantic>=2.13.4",
    "tortoise-orm>=1.1.7",
    "urllib3-future[brotli,zstd]>=2.21.902",
    "uvloop>=0.22.1",
]

[tool.basedpyright]
pythonVersion = "3.13"
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
typeCheckingMode = "strict"

[tool.mypy]
native_parser = true
python_executable = ".venv/bin/python"
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["A", "ANN", "ARG", "BLE", "C4", "DTZ", "E", "ERA", "F", "FIX",
          "FURB", "ISC", "INP", "G", "PERF", "PIE", "RSE", "RUF", "S", "SIM",
          "SLF", "T20", "TC", "TID", "UP", "W"]
ignore = ["S314"]

[tool.pyrefly]
preset = "strict"
python-version = "3.13"

[tool.ty.rules]
division-by-zero = "warn"
missing-override-decorator = "warn"
missing-type-argument = "warn"
possibly-missing-attribute = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"
unsupported-dynamic-base = "warn"

[tool.uv.sources.hikari]
git = "https://github.com/hikari-py/hikari.git"
rev = "222aab1bcd54bba9292d0087271a289a0742a56b"

[tool.uv.sources.tortoise-orm]
git = "https://github.com/tortoise/tortoise-orm.git"
rev = "ff7ef94ee72bdc7fe5002df2858f1c7e3d6b2f3d"
